--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 absl-py==0.7.0
 astor==0.7.1
+certifi==2018.11.29
+chardet==3.0.4
 cycler==0.10.0
+future==0.17.1
 gast==0.2.2
 grpcio==1.18.0
 h5py==2.9.0
+idna==2.8
+ImageScraper==2.0.7
 Keras==2.2.4
 Keras-Applications==1.0.7
 Keras-Preprocessing==1.0.9
 kiwisolver==1.0.1
+lxml==4.3.1
 Markdown==3.0.1
 matplotlib==3.0.2
 numpy==1.16.1
@@ -19,11 +25,15 @@ pyparsing==2.3.1
 python-dateutil==2.8.0
 pytz==2018.9
 PyYAML==3.13
+requests==2.21.0
 scipy==1.2.1
+setproctitle==1.1.10
+SimplePool==0.1
 six==1.12.0
 tabulate==0.8.3
 tensorboard==1.12.2
 tensorflow==1.12.0
 termcolor==1.1.0
 tqdm==4.31.1
+urllib3==1.24.1
 Werkzeug==0.14.1
